--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ select.form-control {
   .wrapper .image-holder {
     height: 0px; }
   .wrapper .form-content {
-    height: 65vh; }
+    height: 100%; }
 
   .wizard {
     width: 80%; }
@@ -304,7 +304,7 @@ select.form-control {
     .wrapper .image-holder {
       height: 0px; }
     .wrapper .form-content {
-      height: auto;
+      height: 820px;
       padding: 35px 20px; }
 
   .wizard {
